@@ -4,6 +4,7 @@
 	  - 'summarize_changes' (replaced by 'report_summarize_changes')
 	  - 'grouped' (replaced by 'report_grouped')
 	* Remove handling of outdated config parameters/option
+	* Raise log level for some deprecations
 
 2023-07-22 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Improve handling of ACL errors
